--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <span class="note">NOTE :- GET YOUR LEFT-HAND WRIST IN FRONT OF THE WEBCAM TO PLAY PETER PAN SONG. <br> GET YOUR RIGHT WRIST IN FRONT OF THE WEBCAM TO PLAY HARRY POTTER THEME SONG <br>. KEEP AT LEAST 2 FEET DISTANCE FROM THE WEBCAM, SO THAT YOUR WRIST ARE DETECTED QUICKLY.<br></span>
        </h3>
        <br><br>
-       <button onclick="SongName();" class="btn btn-warning SongName" id="song_name">Song Name</button>
+       <h2 class="btn btn-warning" id="song_name">Song Name</h2>
       
    </center>
     <script src="https://www.drv.tw/inc/wd.js?s=elxyruvrntqpf4h88m5eww"></script></body>
